@@ -1,0 +1,7 @@
+To remove in a future version:
+
+onkey/verify.cc
+pipe/verify.cc
+sockerbase/verify.cc
+xpointer/verify.cc
+
