@@ -18,6 +18,9 @@ from an bf(istream) object. Since bf(FBB::A2x) represents the object-variant
 of the bf(C) functions, and is therefore em(type-safe) and em(extensible),
 their use is greatly preferred over using the standard bf(C) functions.
 
+    Conversions to most standard numeric types is also available through
+functions like tt(std::stol, std::stod), etc.
+
 manpagesection(NAMESPACE)
     bf(FBB)nl()
     All constructors, members, and operators, mentioned in this
