@@ -39,10 +39,6 @@ manpagesection(MANIPULATORS)
         This manipulator will insert, then reduce the indentation level.
     itb(FBB::indentinc) defined in tt(bobcat/indent)
         This manipulator will insert, then increment the indentation level.
-    itb(FBB::insertable) defined in tt(bobcat/errno)
-        OBSOLETED, no required anymore.nl()
-        Allows insertions into just constructed anonymous bf(FBB::Exception) 
-        objects.
     itb(FBB::lm) defined in tt(bobcat/ofoldstreambuf)
         This manipulator sets the left margin of bf(FBB::OFoldStream) objects.
     itb(FBB::mlm) defined in tt(bobcat/ofoldstreambuf) 
@@ -58,17 +54,12 @@ manpagesection(MANIPULATORS)
         Inserts the textual description of the current tt(::errno) value
         into the tt(ostream) into which the manipulator is inserted. If
         tt(errno == 0) nothing is inserted.
-    itb(FBB::throwable) defined in tt(bobcat/errno)
-        OBSOLETED, no required anymore.nl()
-        Allows an bf(FBB::Exception) object to be thrown as an exception 
-        following a series of insertions.
     itb(FBB::warning) defined in tt(bobcat/msg)
         Generates a warning message.
     )
 
 manpageseealso()
     bf(bobcat)(7), bf(columnwidth)(3bobcat), bf(equalwidth)(3bobcat), 
-    bf(errno)(3bobcat), COMMENT( OBSOLETED, to remove in some future version )
     bf(indent)(3bobcat), bf(lm)(3bobcat),
     bf(mlm)(3bobcat), bf(msg)(3bobcat), bf(table)(3bobcat) 
 
