@@ -62,8 +62,6 @@ manpagesection(MEMBER FUNCTIONS)
     itb(void setEcho(OneKey::Mode state)) 
         Changes the echo-state of the bf(OneKey) object. The argument may be
         either bf(OneKey::ON) or bf(OneKey::OFF).
-    itb(void verify() const)
-        Obsoleted, will be removed in a future Bobcat release.
     )
 
 manpagesection(EXAMPLE)
