@@ -82,9 +82,6 @@ descriptor. This member can be used, e.g., to construct an tt(IFdStream)
 object to extract the information that is inserted into the write-end of the
 pipe. 
 
-    itb(void verify() const)
-        Obsoleted, can safely be removed from source files.
-
     itb(int writeFd() const)
         Returns the pipe's file descriptor that is used for writing.
 
