@@ -67,8 +67,6 @@ if the socket's debug option could not be modified.
 if the socket's reuse option could not be modified.
     itb(int socket() const)
         This accessor returns the bf(FBB::SocketBase)'s socket value.
-    itb(void verify() const)
-        Obsoleted, will be removed in a future Bobcat release.
     )
 
 manpagesection(EXAMPLE)
