@@ -94,6 +94,7 @@ manpageseealso()
     bf(bobcat)(7), bf(a2x)(3bobcat)
 
 manpagebugs()
-    None Reported.
+    The functionality of this class is to a large extent also offered by the
+    bf(C++) function tt(std::to_string).
 
 includefile(include/trailer)
