@@ -45,8 +45,6 @@ right screen-margin of the root window (going left), a negative y-coordinate
 is measured from the bottom screen-margin of the root window (going up). On
 success tt(true) is returned; tt(false) is returned if the pointer could not
 be moved.
-    itb(void verify() const)
-        Obsoleted, will be removed in a future Bobcat release.
     )
 
 manpagesection(EXAMPLE)
