@@ -1,7 +1,5 @@
 #include "signal"
 
-//#include <iostream> // TMP
-
 #include <algorithm>
 
 #include <bobcat/exception>
