@@ -6,6 +6,10 @@ bobcat (4.03.00) WIP
 
   * Programs using DiffieHellman should be recompiled.
 
+  * The class Signal now uses 'sigaction' instead of the (deprecated) function
+    'signal' 
+
+
 -----------------------------------------------
     
 bobcat (4.02.00)
